samples/_failures_safe/1761148429_930b48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab44ac57.c: In function ‘next_token’:
./samples/SAFE/__tmp_ab44ac57.c:135:13: error: expected declaration or statement at end of input
  135 |             lexer->position++;
      |             ^~~~~
./samples/SAFE/__tmp_ab44ac57.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab44ac57.c:135:13: error: expected declaration or statement at end of input
